Two espresso tests

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,7 +35,10 @@ dependencies {
     androidTestCompile 'com.android.support.test.espresso:espresso-intents:3.0.1'
     androidTestCompile 'com.android.support.test:rules:1.0.1'
     androidTestCompile 'com.android.support.test:runner:1.0.1'
+    //for idling tests
     compile 'com.android.support.test.espresso:espresso-idling-resource:3.0.1'
+    //for recyclerview tests
+    compile 'com.android.support.test.espresso:espresso-contrib:3.0.1'
 
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
