--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,4 +48,7 @@ dependencies {
 
     //Exoplayer
     compile 'com.google.android.exoplayer:exoplayer:r2.2.0'
+
+    //Picasso library to load posters in imageViews
+    compile 'com.squareup.picasso:picasso:2.5.2'
 }
