--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -54,6 +54,10 @@ Copyright (C) 2017 The Android Open Source Project
                 android:name="android.appwidget.provider"
                 android:resource="@xml/oven_widget_provider_info" />
         </receiver>
+
+        <service
+            android:name=".ListWidgetService"
+            android:permission="android.permission.BIND_REMOTEVIEWS" />
     </application>
 
 </manifest>
